refactor: handlers to accept body as byte